--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.kink3d.shading": "https://github.com/Kink3d/kShading.git",
+    "com.kink3d.mirrors": "git+https://github.com/Kink3d/kMirrors",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.animation.rigging": "1.0.3",
